Fix image overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -300,9 +300,9 @@ a:hover {
 }
 
 #projects img {
-  height: 100%;
-  background-size: cover;
-  background-position: cover;
+  object-fit: cover;
+  width: 100%;
+  max-height: 100%;
 }
 
 #projects h4 {
